# cppFuzzer

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  configure_doxygen_output.sh
.github/workflows/: Release.yml  cmake-multi-platform.yml  codacy.yml  codeql.yml
docs/: overview.md
docs/doxygen/: Doxyfile  Doxyfile.bak
docs/doxygen/html/: annotated.html  atomizes_8hpp_source.html  classatomizes_1_1_h_t_t_p_message-members.html  classatomizes_1_1_h_t_t_p_message.html  classatomizes_1_1_h_t_t_p_message_parser-members.html  classatomizes_1_1_h_t_t_p_message_parser.html  classcpp_fuzzer_1_1cpp_fuzzer_internals-members.html  classcpp_fuzzer_1_1cpp_fuzzer_internals.html  classcpp_parser_1_1_abstract_parser-members.html  classcpp_parser_1_1_abstract_parser.html  classcpp_parser_1_1_file_parser-members.html  classcpp_parser_1_1_file_parser.html  classcpp_parser_1_1_folder_parser-members.html  classcpp_parser_1_1_folder_parser.html  classcpp_parser_1_1_string_parser-members.html  classcpp_parser_1_1_string_parser.html  classcpp_parser_1_1cpp_parser_internals-members.html  classcpp_parser_1_1cpp_parser_internals.html  classes.html  classfuzzer_a_p_i_1_1fuzzer_a_p_i_interals-members.html  classfuzzer_a_p_i_1_1fuzzer_a_p_i_interals.html  classhost_determinator_1_1host_determinator_internals-members.html  classhost_determinator_1_1host_determinator_internals.html  classhtml_1_1html__parser-members.html  classhtml_1_1html__parser.html  classmain_fuzzer_1_1cpp_main_internals-members.html  classmain_fuzzer_1_1cpp_main_internals.html  classpy_i_p_c_1_1_i_p_c_interface-members.html  classpy_i_p_c_1_1_i_p_c_interface.html  classpy_i_p_c_1_1py_i_p_c_factory-members.html  classpy_i_p_c_1_1py_i_p_c_factory.html  classpy_i_p_c_1_1py_i_p_c_internals-members.html  classpy_i_p_c_1_1py_i_p_c_internals.html  classrpc_hub_1_1rpc_hub_internals-members.html  classrpc_hub_1_1rpc_hub_internals.html  classsanitizer_1_1sanitizer_internals-members.html  classsanitizer_1_1sanitizer_internals.html  classsast_1_1sast_internals-members.html  classsast_1_1sast_internals.html  classserver-members.html  (+149 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+11 more)
docs/doxygen/latex/: annotated.tex  atomizes_8hpp_source.tex  classatomizes_1_1_h_t_t_p_message.tex  classatomizes_1_1_h_t_t_p_message_parser.tex  classcpp_fuzzer_1_1cpp_fuzzer_internals.tex  classcpp_parser_1_1_abstract_parser.eps  classcpp_parser_1_1_abstract_parser.tex  classcpp_parser_1_1_file_parser.eps  classcpp_parser_1_1_file_parser.tex  classcpp_parser_1_1_folder_parser.eps  classcpp_parser_1_1_folder_parser.tex  classcpp_parser_1_1_string_parser.eps  classcpp_parser_1_1_string_parser.tex  classcpp_parser_1_1cpp_parser_internals.tex  classfuzzer_a_p_i_1_1fuzzer_a_p_i_interals.tex  classhost_determinator_1_1host_determinator_internals.tex  classhtml_1_1html__parser.tex  classmain_fuzzer_1_1cpp_main_internals.tex  classpy_i_p_c_1_1_i_p_c_interface.eps  classpy_i_p_c_1_1_i_p_c_interface.tex  classpy_i_p_c_1_1py_i_p_c_factory.tex  classpy_i_p_c_1_1py_i_p_c_internals.eps  classpy_i_p_c_1_1py_i_p_c_internals.tex  classrpc_hub_1_1rpc_hub_internals.tex  classsanitizer_1_1sanitizer_internals.tex  classsast_1_1sast_internals.tex  classserver.tex  classserver_handler_1_1server.tex  classserver_handler_1_1website__handler.tex  classsetup_fuzzer_1_1setup_fuzzer_internals.tex  classstructure_printer_1_1structure_printer_internals.tex  classteardown_fuzzer_1_1teardown_fuzzer_interals.tex  classwebsite__handler.tex  external_2_basic-_http-_server-cpp_2main_8h_source.tex  files.tex  fuzzer_8cpp.tex  fuzzer_8h.tex  fuzzer_8h_source.tex  fuzzer_a_p_i_8cpp.tex  fuzzer_a_p_i_8h.tex  (+54 more)
src/: fuzzer.cpp  fuzzerAPI.cpp  hostDeterminator.cpp  main.cpp  parser.cpp  pyIPC.cpp  rpcHub.cpp  sanitizer.cpp  sast.cpp  setupFuzzer.cpp  structurePrinter.cpp  teardownFuzzer.cpp
src/includes/: atomizes.hpp  cppFuzzer.h  cppMain.h  cppParser.h  fuzzer.h  fuzzerAPI.h  hostDeterminator.h  macroBase.h  main.h  parser.h  pyIPC.h  rpcHub.h  sanitizer.h  sast.h  setupFuzzer.h  structurePrinter.h  teardownFuzzer.h
test/: testAPI.cpp  testFuzzer.cpp  testMain.cpp  testParser.cpp  testRPC.cpp  testSanitizer.cpp  testSast.cpp  testSetupFuzzer.cpp  testTeardownFuzzer.cpp  testWebservice.cpp
